# telematch

./: .env-example  .gitattributes  .gitignore  Cargo.toml  README.md
src/: geocoding.rs  main.rs  models.rs
src/app/: chat_ui.rs  mod.rs  types.rs  ui.rs
src/app/handlers/: browsing.rs  matching.rs  mod.rs  onboarding.rs
src/bot/: i18n.rs  keyboards.rs  mod.rs
src/db/: mod.rs  profile_repository.rs  swipe_repository.rs
src/db/migrations/: 002_create_swipes.sql  003_added_chat_id_column.sql  004_added_username_column.sql  007_create_match_notifications.sql  009_coordinates_not_null.sql  010_chat_id_not_null.sql
src/domain/: mod.rs  profile.rs
src/migrations/: 001_create_profiles.sql  004_added_username_column.sql  005_added_is_active.sql  006_added_lang_column.sql  008_add_coordinates.sql
src/scripts/: remove_swipes_matches.sql
src/services/: geocoding.rs  mod.rs
src/telegram/: i18n.rs  keyboards.rs  mod.rs
