[package]
name = "telematch"
description = "A Telegram bot for matching users based on their preferences."
license = "MIT"
repository = "https://github.com/vasylkhorev/telematch"
keywords = ["telegram", "bot", "matching", "rust"]
categories = ["network-programming", "social-networking"]
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.17.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.39", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15.7"

sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "macros",
    "migrate"
] }

reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "query"] }
serde = { version = "1", features = ["derive"] }

[lints.clippy]
multiple_crate_versions = "allow"